12/8/2017
   -   Checkers now cant move on teammates
   -   Checkers now have a yellow hue if selected
   -   Checkers are now deselected with right click
12/18/2017
   -   Checkers now can jump multiple times
   -   Began implementing becoming king
12/21/2017
   -   Checkers can now become a king and jump in multi directions
   -   Fixed bug where gray checker could land on a red checker
   -   Realized how arrays actually work
12/27/2017
   -   Implementing the AI
   -   Added a popup menu to chose single vs 2 player but it currently has no effect
   -   AI is relatively implemented, only choses "best" decision for its current move not in the grand scheme of things